--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -168,7 +168,7 @@ footer {
     .item {
         position: relative;
         overflow: hidden;
-        margin-bottom: 20px;
+        margin-bottom: 50px;
 
         &:hover {
             .service-body {
@@ -273,6 +273,7 @@ footer {
 .section-6 {
     .card {
         border-radius: 40px;
+        margin-bottom: 50px;
 
         img {
             border-top-left-radius: 40px;
@@ -307,6 +308,45 @@ footer {
             color: $secondary-color;
             font-size: 1.5em;
             font-weight: 500;
+        }
+    }
+}
+
+.section-8 {
+    .card {
+        border-radius: 40px;
+        margin-bottom: 50px;
+
+        img {
+            border-top-left-radius: 40px;
+            border-top-right-radius: 40px;
+        }
+
+        .card-body {
+            .card-title {
+                a {
+                    font-size: 1.3em;
+                    text-decoration: none;
+                    color: $text-color;
+                    font-weight: 600;
+    
+                    &:hover {
+                        color: $primary-color;
+                    }
+                }
+
+                h3 {
+                    font-size: 1.5em;
+                    font-weight: 600;
+                }
+            }
+
+            .card-text {
+                span {
+                    font-size: 1.1em;
+                    color: $light-background;
+                }
+            }
         }
     }
 }
