--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -350,3 +350,22 @@ footer {
         }
     }
 }
+
+.section-9 {
+    .card {
+        border-radius: 40px;
+        margin-bottom: 50px;
+
+        .card-body {
+            a {
+                font-size: 1.2em;
+                text-decoration: none;
+                color: $text-color;
+
+                &:hover {
+                    color: $primary-color;
+                }
+            }
+        }
+    }
+}
